added springboot dependency and initializer class