@@ -7,6 +7,7 @@
         <artifactId>parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
      
      <artifactId>rest</artifactId>
 
@@ -20,17 +21,48 @@
         </dependency>
 
 
-        <!-- javafx -->
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>16</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>16</version>
-        </dependency>
+
+    <!-- springboot-->
+    
+ <dependency>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <exclusions>
+        <exclusion>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
+          <groupId>org.springframework.boot</groupId>
+        </exclusion>
+      </exclusions>
+      <groupId>org.springframework.boot</groupId>
+      <version>2.3.4.RELEASE</version>
+    </dependency>
+    <dependency>
+      <artifactId>spring-boot-starter-jetty</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <version>2.3.4.RELEASE</version>
+    </dependency>
+    <dependency>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <exclusions>
+        <exclusion>
+          <artifactId>junit-vintage-engine</artifactId>
+          <groupId>org.junit.vintage</groupId>
+        </exclusion>
+      </exclusions>
+      <groupId>org.springframework.boot</groupId>
+      <scope>test</scope>
+      <version>2.3.4.RELEASE</version>
+    </dependency>
+    <dependency>
+      <artifactId>spring-boot-test-autoconfigure</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <version>2.2.6.RELEASE</version>
+    </dependency>
+    <dependency>
+      <artifactId>spring-test</artifactId>
+      <groupId>org.springframework</groupId>
+      <version>5.2.5.RELEASE</version>
+    </dependency>
+  
         
 
         <!-- junit testing with jupiter -->
@@ -70,6 +102,7 @@
         <version>5.4.0.201906121030-r</version>
       </dependency>
     </dependencies>
+     
 
     <build>
         <plugins>
@@ -77,11 +110,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
-                <configuration>
-                    <argLine>
-                    @{jaCoCoArgLine} --add-opens infectiontracer.rest/infectiontracer.restapi=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -105,11 +133,14 @@
                     <artifactId>spotbugs-maven-plugin</artifactId>
                 </plugin>
                 
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.6</version>
-            </plugin>
+    
+<!--SpringBoot-->
+             <plugin>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
+        <version>2.3.4.RELEASE</version>
+      </plugin>
         </plugins>
+       
     </build>
 </project>
